// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question adapter construct builds with attributes 1`] = `
Object {
  "collapsed": false,
  "correctLabels": Array [
    "a",
    "b",
    "c",
  ],
  "dirty": false,
  "editing": false,
  "incorrectLabels": Array [
    "x",
    "y",
    "z",
  ],
  "needsUpdate": false,
  "partialLabels": Array [
    "l",
    "m",
    "n",
  ],
  "revealAnswer": "when-incorrect",
  "solution": Object {
    "children": Array [
      Object {
        "children": null,
        "content": Object {
          "textGroup": Array [
            Object {
              "data": Object {
                "align": "left",
                "hangingIndent": false,
                "indent": 0,
              },
              "text": Object {
                "styleList": null,
                "value": "this is some example solution text",
              },
            },
          ],
        },
        "id": "7fa8ecca-cdd2-4cb8-ae55-5435db9fb05e",
        "index": 0,
        "metadata": Object {},
        "type": "ObojoboDraft.Chunks.Text",
      },
    ],
    "content": Object {},
    "id": "solution",
    "index": 0,
    "metadata": Object {},
    "type": "ObojoboDraft.Pages.Page",
  },
  "type": "default",
}
`;

exports[`Question adapter construct builds with bad solution property 1`] = `
Object {
  "collapsed": false,
  "correctLabels": null,
  "dirty": false,
  "editing": false,
  "incorrectLabels": null,
  "needsUpdate": false,
  "partialLabels": null,
  "revealAnswer": "default",
  "solution": null,
  "type": "default",
}
`;

exports[`Question adapter construct builds without attributes 1`] = `
Object {
  "collapsed": false,
  "correctLabels": null,
  "dirty": false,
  "editing": false,
  "incorrectLabels": null,
  "needsUpdate": false,
  "partialLabels": null,
  "revealAnswer": "default",
  "solution": null,
  "type": "default",
}
`;

exports[`Question adapter toJSON builds a JSON representation 1`] = `
Object {
  "content": Object {
    "collapsed": false,
    "correctLabels": "a|b|c",
    "incorrectLabels": "d|e|f",
    "partialLabels": null,
    "revealAnswer": "default",
    "solution": Object {
      "children": Array [
        Object {
          "children": null,
          "content": Object {
            "textGroup": Array [
              Object {
                "data": Object {
                  "align": "left",
                  "hangingIndent": false,
                  "indent": 0,
                },
                "text": Object {
                  "styleList": null,
                  "value": "this is some example solution text",
                },
              },
            ],
          },
          "id": "7fa8ecca-cdd2-4cb8-ae55-5435db9fb05e",
          "index": 0,
          "metadata": Object {},
          "type": "ObojoboDraft.Chunks.Text",
        },
      ],
      "content": Object {},
      "id": "solution",
      "index": 0,
      "metadata": Object {},
      "type": "ObojoboDraft.Pages.Page",
    },
    "type": "default",
  },
}
`;

exports[`Question adapter toJSON builds a JSON representation with correct/incorrect labels or a solution 1`] = `
Object {
  "content": Object {
    "collapsed": false,
    "correctLabels": null,
    "incorrectLabels": null,
    "partialLabels": null,
    "revealAnswer": "default",
    "solution": null,
    "type": "default",
  },
}
`;
